--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                         type="application/pdf"></object>
                 <object class="cfi" data="cert/Accounting Fundamentals.pdf" type="application/pdf"></object>
                 <object id= "mongo" class="cfi" data="cert/MongoDB Basics.png" type="image/jpg"></object>
-                <object class="cfi" data="cert/Data Analysis Using Excel.pdf" type="application/pdf"></object>
-                <object class="cfi" data="cert/Persuasive Communications.pdf" type="application/pdf"></object>
-                <object class="cfi" data="cert/Interpersonal And Human Relations.pdf" type="application/pdf"></object>
+                <object id="rice" class="cfi" data="cert/Data Analysis Using Excel.pdf" type="application/pdf"></object>
+                <object id="persuasive" class="cfi" data="cert/Persuasive Communications.pdf" type="application/pdf"></object>
+                <object id="interpersonal" class="cfi" data="cert/Interpersonal And Human Relations.pdf" type="application/pdf"></object>
         </div>
 
 </body>
